test/classes/delete-free/anymanaged/anymanaged-member-used-in-method.good
anymanaged-member-used-in-method.chpl:2: warning: field with generic declared type
anymanaged-member-used-in-method.chpl:12: error: initialization requires an argument for thing2
